# demo-cloud-native-ecommerce

./: CHANGELOG.md  LICENSE  README.md  demo-cloud-native-ecommerce.cabal  package.yaml  stack.yaml  template.yaml
.github/workflows/: haskell-ci.yml
app/: Main.hs  PaymentService.hs
